--- a/intern_onboarding/003_ng2/exercise_5/demo/cat-app/src/app/cat/cat.component.html
+++ b/intern_onboarding/003_ng2/exercise_5/demo/cat-app/src/app/cat/cat.component.html
@@ -4,6 +4,9 @@
 
 <p *ngIf="cat.weight">weight: {{cat.weight}}</p>
 
+<button (click)="attack.emit(cat)">Attack</button>
+<button (click)="run.emit(cat)">Run Away!</button>
+
 <pre>
 {{cat | json}}
 </pre>
